Layout and box sizing fixes to achieve scrollbar perfection

--- a/src/vs/workbench/contrib/positronEnvironment/browser/components/environmentVariableItem.css
+++ b/src/vs/workbench/contrib/positronEnvironment/browser/components/environmentVariableItem.css
@@ -4,6 +4,7 @@
 
 .environment-variable {
 	display: flex;
+	box-sizing: border-box;
 	border-top: 0.5px solid var(--vscode-positronEnvironment-gridColor);
 	border-bottom: 0.5px solid var(--vscode-positronEnvironment-gridColor);
 }
